# robo_vision_mavalink

./: .gitignore  CMakeLists.txt  bitrate.h  client.cpp  server.cpp
TCP_Control_Stream/: TCPControlStream.cpp  TCPControlStream.h
UDP_control/: AbstractUdpControlConnection.cpp  AbstractUdpControlConnection.h  UdpControlConnectionCli.cpp  UdpControlConnectionCli.h  UdpControlConnectionHost.cpp  UdpControlConnectionHost.h
Video/: UvcH264.h  VideoCapture.cpp  VideoCapture.h  VideoWriter.cpp  VideoWriter.h  libv4l2-hw.h  usbinfo.c  usbinfo.h
client_src/: connection_metadata.cpp  connection_metadata.h  websocket_endpoint.cpp  websocket_endpoint.h
mav_link/: autopilot_interface.cpp  autopilot_interface.h  makefile  mavlink_control.cpp  serial_port.h
server_src/: base_server.cpp  base_server.h
